<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcercaDeNosotros">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/action_bar" />
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="VETERINARIA"
        android:textSize="50dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgNosotros"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="130dp"
        android:text="@string/autor"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAutorTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/telefono_autor"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAutorMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/mail_autor"
        android:textSize="25dp"
        android:textStyle="bold" />

</LinearLayout>